--- a/app/src/main/res/layout/fragment_product_details_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_product_details_list_dialog.xml
@@ -1,10 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:padding="10dp">
+
+    <ImageButton
+        android:id="@+id/select_as_fav"
+        android:layout_height="40dp"
+        android:layout_width="40dp"
+        android:background="@drawable/ic_baseline_favorite_border_24"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="10dp"
+        app:layout_constraintRight_toRightOf="parent" />
+    <ImageView
+        android:id="@+id/product_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/select_as_fav"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_baseline_image_24" />
+
+    <TextView
+        android:id="@+id/product_name"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="product name"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/product_image"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+    <TextView
+        android:id="@+id/product_price"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="product price"
+        app:layout_constraintTop_toBottomOf="@+id/product_name"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+    <TextView
+        android:id="@+id/product_seller"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="product seller"
+        app:layout_constraintTop_toBottomOf="@+id/product_price"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+    <TextView
+        android:id="@+id/product_size"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="product size"
+        app:layout_constraintTop_toBottomOf="@+id/product_seller"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/add_to_cart_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add to Cart"
+        app:icon="@drawable/ic_baseline_shopping_cart_24"
+        app:iconGravity="textEnd"
+        app:layout_constraintTop_toBottomOf="@id/product_size"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 
-</LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
