--- a/app/src/main/res/layout/fragment_product_details_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_product_details_list_dialog.xml
@@ -14,15 +14,21 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="10dp"
         app:layout_constraintRight_toRightOf="parent" />
-    <ImageView
-        android:id="@+id/product_image"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/image_card"
         android:layout_width="200dp"
         android:layout_height="200dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/select_as_fav"
-        android:layout_margin="10dp"
-        android:src="@drawable/ic_baseline_image_24" />
+        app:layout_constraintTop_toBottomOf="@id/select_as_fav">
+        <ImageView
+            android:id="@+id/product_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_baseline_image_24" />
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:id="@+id/product_name"
@@ -30,7 +36,7 @@
         android:layout_width="wrap_content"
         android:text="product name"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/product_image"
+        app:layout_constraintTop_toBottomOf="@+id/image_card"
         app:layout_constraintLeft_toLeftOf="parent"/>
     <TextView
         android:id="@+id/product_price"
@@ -63,8 +69,5 @@
         app:iconGravity="textEnd"
         app:layout_constraintTop_toBottomOf="@id/product_size"
         app:layout_constraintLeft_toLeftOf="parent"/>
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
