--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -9,12 +9,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_of_fav"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="visible"/>
 
     <ImageView
         android:id="@+id/not_found"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:src="@drawable/not_found"
         android:visibility="gone"/>
 
