--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -13,4 +13,11 @@
         android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
          />
+    <ImageView
+        android:id="@+id/not_found"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:src="@drawable/not_found"
+        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
