--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.account.ProfileFragment">
 
@@ -12,13 +13,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            app:cardCornerRadius="360dp"
+            android:layout_marginTop="10dp">
         <ImageView
             android:id="@+id/display_image"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
             android:src="@drawable/ic_baseline_image_24" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/username"
@@ -26,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="User full name"
+            android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="25sp" />
 
